--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -9,3 +9,4 @@ $container-width: 6 * $card-width + 15; // + 15 x scrollbar
 /* colori */
 $background: #303443;
 $text: #f9f9f9;
+$input-background: #4b4e5a;
